@@ -9,15 +9,15 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class Day22Test {
 
-    List<String> input = Arrays.asList();
+    List<Integer> input = List.of(510, 10, 10);
 
     @Test
     void testPart1() {
-        assertEquals(0, Day22.part1(input));
+        assertEquals(114, Day22.part1(input));
     }
 
     @Test
     void testPart2() {
-        assertEquals(0, Day22.part2(input));
+        assertEquals(45, Day22.part2(input));
     }
 }
